Closed Bug 450089 Opened 17 years ago Closed 17 years ago

parent children aren't invalidated if not accessible element is shown

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: surkov, Assigned: surkov)

References

()

Details

Attachments

(1 file)

spun off bug 448976. There not accessible element is shown but we don't invalidate children of container accessible
Attached patch patchSplinter Review
Attachment #333215 - Flags: review?(ginn.chen)
Attachment #333215 - Flags: review?(ginn.chen) → review+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Verified fixed in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1a2pre) Gecko/20080814041610 Minefield/3.1a2pre. With this in, I don't see a problem with Session Restore other than bug 360510, which must be fixed for Thunderbird anyway, to get checked/unchecked states for these treeviews right.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: