Bug 450089 – parent children aren't invalidated if not accessible element is shown, r=ginn.chen